--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,9 +18,13 @@ spring:
     # 指定数据库驱动
     driver-class-name: com.mysql.cj.jdbc.Driver
     # 数据库jdbc连接url地址
-    url: jdbc:mysql://127.0.0.1:3306/myapp_dev
+    url: jdbc:mysql://127.0.0.1:3306/likui
     # 数据库账号
     username: root
     password: melikui
 
 
+# mapper.xml配置文件的路径
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+#  type-aliases-package: com.today.App.model
