--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,4 +27,4 @@ spring:
 # mapper.xml配置文件的路径
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-#  type-aliases-package: com.today.App.model
+  type-aliases-package: com.today.App.model
