--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
     username: root
     password: melikui
 
-
-# mapper.xml配置文件的路径
+# mybatis 配置
 mybatis:
+  # mapper.xml配置文件的路径
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.today.App.model
