--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       # classpath目录下的WEB-INF文件夹内容修改不重启
       exclude: WEB-INF/**
 
-  # 配置数据库
+  # 配置 mysql 数据库
   datasource:
     # 指定数据库驱动
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -24,8 +24,14 @@ spring:
     username: root
     password: melikui
 
-  # Redis 配置
+  # 配置其他数据库
   data:
+    # Mongodb 配置
+    mongodb:
+      host: 127.0.0.1
+      port: 27017
+      database: likui # 指定使用的数据库(集合)
+    # Redis 配置
     redis:
       host: 127.0.0.1
       port: 6379
