Life is long, you need to lean Java ~

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,3 +57,6 @@ mybatis:
   # mapper.xml配置文件的路径
   mapper-locations: classpath:mapper/*.xml
   # type-aliases-package: com.today.App.entity
+  # 打印 mysql 日志
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
