--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,4 +60,4 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
     # 打印 mysql 日志
-    # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
