--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
       host: 127.0.0.1
       port: 27017
       database: spider
+      field-naming-strategy: org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
     # Redis 配置
     redis:
       host: 127.0.0.1
