--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,7 @@ spring:
       host: 127.0.0.1
       port: 27017
       database: spider
+      # 驼峰映射
       field-naming-strategy: org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
     # Redis 配置
     redis:
@@ -59,6 +60,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   # type-aliases-package: com.today.App.entity
   configuration:
+    # 驼峰映射
     map-underscore-to-camel-case: true
     # 打印 mysql 日志
     # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
