--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,7 +58,7 @@ spring:
 mybatis:
   # mapper.xml配置文件的路径
   mapper-locations: classpath:mapper/*.xml
-  # type-aliases-package: com.today.App.entity
+  # type-aliases-package: com.vvtcp.App.entity
   configuration:
     # 驼峰映射
     map-underscore-to-camel-case: true
